--- a/website/azuredevops.erb
+++ b/website/azuredevops.erb
@@ -84,7 +84,6 @@
               </li>
             </ul>
           </li>
-
           <li>
             <a href="#">Resources</a>
             <ul class="nav">
@@ -156,6 +155,9 @@
               </li>
               <li>
                 <a href="/docs/providers/azuredevops/r/iteration_permissions.html">azuredevops_iteration_permissions</a>
+              </li>
+              <li>
+                <a href="/docs/providers/azuredevops/r/library_permissions.html">azuredevops_library_permissions</a>
               </li>
               <li>
                 <a href="/docs/providers/azuredevops/r/project.html">azuredevops_project</a>
@@ -285,6 +287,9 @@
               </li>
               <li>
                 <a href="/docs/providers/azuredevops/r/variable_group.html">azuredevops_variable_group</a>
+              </li>
+              <li>
+                <a href="/docs/providers/azuredevops/r/variable_group_permissions.html">azuredevops_variable_group_permissions</a>
               </li>
               <li>
                 <a href="/docs/providers/azuredevops/r/workitemquery_permissions.html">azuredevops_workitemquery_permissions</a>
